Bot reviewer: review tone and voice

--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -8,7 +8,7 @@ This document outlines the implementation details, usage instructions, and templ
 
 ## Before you begin
 
-To benefit from this feature, update your FastStore project to `v3.0.17` or higher. To do this, follow these steps:
+To use this feature, update your FastStore project to `v3.0.17` or higher. To do this, follow these steps:
 
 1. Open your project in a code editor.
 
@@ -161,9 +161,9 @@ To sum up, here's the difference between the two template hierarchies:
 | Matching Criteria               | Slug, Subcategory, Category, Department, Generic.              | Slug, fallback to main department, generic/default, fallback |
 | Reliance on Product Information | Considers product details (subcategory, category, department). | Ignores product details and uses URL slug only.           |
 
-## Examples
+## Examples of template selection
 
-In this section, we'll delve into different scenarios for selecting PDP and PLP templates.
+The following examples illustrate different scenarios for selecting PDP and PLP templates.
 
 ### PDP template selection example
 
