--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -85,7 +85,7 @@ The PLP template selection process follows this order:
 3. If no department or category template matches, the generic PLP template with an empty template value in Headless CMS is applied.
 4. If no template is found at any of these levels, the system uses the first available PLP template.
 
-For example, suppose you define the following in Headless CMS:
+For example, you define the following in Headless CMS:
 
 - Template value `/computers`: applies to both `/computers` and any slug under it unless overridden.
 - Template value `/computers/accessories`: applies only to `/computers/tools`.
