Apply suggestions from code review
Co-authored-by: Karen Krieger <karen.krieger@vtex.com>

--- a/docs/faststore/components/organisms/newsletter.mdx
+++ b/docs/faststore/components/organisms/newsletter.mdx
@@ -340,7 +340,7 @@ When customers subscribe to the store newsletter, their information is saved in 
 
 To create the `NL` entity, follow the instructions below based on the method you prefer: [creating via Admin](#creating-via-admin) or [creating via API](#creating-via-api).
 
-> ℹ For more details about Master Data data entities, see the [data entity](https://help.vtex.com/en/tutorial/data-entity--tutorials_1265?&utm_source=autocomplete#creating-data-entities) article.
+> ℹ For more details about Master Data data entities, see the [data entity](https://help.vtex.com/en/tutorial/data-entity--tutorials_1265) article.
 
 ### Creating via Admin
 
@@ -442,7 +442,7 @@ To create the `NL` entity, follow the instructions below based on the method you
 
 ### Creating via API
 
-You can also create the Newsletter data entity using the [Create partial document endpoint](https://developers.vtex.com/docs/api-reference/masterdata-api#patch-/api/dataentities/-acronym-/documents). For more information on how to create it using this endpoint, see the [API reference](https://developers.vtex.com/docs/api-reference/masterdata-api#patch-/api/dataentities/-acronym-/documents).
+You can also create the Newsletter data entity using the [Create partial document](https://developers.vtex.com/docs/api-reference/masterdata-api#patch-/api/dataentities/-acronym-/documents) endpoint.
 
 To create the three fields for the Newsletter data entity, see the [Create document with custom ID or update entire document](https://developers.vtex.com/docs/api-reference/masterdata-api#put-/api/dataentities/-acronym-/documents/-id-) endpoint reference. 
 
