Fix table fields

--- a/docs/faststore/components/organisms/newsletter.mdx
+++ b/docs/faststore/components/organisms/newsletter.mdx
@@ -365,11 +365,9 @@ To create the `NL` entity, follow the instructions below based on the method you
 
     1. Click `New Field` and complete the field with the following values:
     
-        | **Field name**   | **Value** |
-        | ---------------- | --------- |
-        | **Name**         | email     |
-        | **Display Name** | Email     |
-        | **Type**         | Email     |
+        | **Name**   | **Display Name** | **Type** |
+        | ---------- | ---------------- | -------- |
+        | email      | Email            | Email    |
 
     2. Click the gear icon (⚙️) to open the field configuration options and check all the following options:
 
@@ -391,11 +389,9 @@ To create the `NL` entity, follow the instructions below based on the method you
 
     1. Click `New Field` and complete the field with the following values:
     
-        | **Field name**   | **Value**            |
-        | ---------------- | -------------------- |
-        | **Name**         | isNewsletterOptIn    |
-        | **Display Name** | Receive newsletter?  |
-        | **Type**         | Boolean              |
+        | **Name**          | **Display Name**    | **Type** |
+        | ----------------- | ------------------- | -------- |
+        | isNewsletterOptIn | Receive newsletter? | Boolean  |
 
     2. Click the gear icon (⚙️) to open the field configuration options and check all the following options:
 
@@ -415,12 +411,10 @@ To create the `NL` entity, follow the instructions below based on the method you
     This field will store the user’s name. 
 
     1. Click `New Field` and complete the field with the following values:
-    
-        | **Field name**   | **Value**   |
-        | ---------------- | ----------- |
-        | **Name**         | name        |
-        | **Display Name** | Name        |
-        | **Type**         | Varchar 750 |
+
+        | **Name** | **Display Name** | **Type**     |
+        | -------- | ---------------- | ------------ |
+        | name     | Name             | Varchar 750  |
 
     2. Click the gear icon (⚙️) to open the field configuration options and check all the following options:
 
