--- a/docs/localization/delivery-promise.mdx
+++ b/docs/localization/delivery-promise.mdx
@@ -6,21 +6,21 @@ title: "Delivery Promise"
 
 In this guide, you’ll learn how to set Delivery Promise in your FastStore project.
 
-**Delivery Promise** is a feature that provides accurate and reliable delivery estimations for available products based on the shopper's specific location. It ensures that customers only see products that are in stock and can be delivered to their address or picked up at nearby locations.
+**Delivery Promise** is a feature that provides accurate and reliable delivery estimations for available products based on the customer location. It ensures that customers only see products that are in stock and can be delivered to their address or picked up at nearby locations.
 
-This solution continuously updates product availability throughout the purchase journey by responding to changes in catalog, pricing, inventory, or shipping settings. These updates are then sent to [Checkout](https://developers.vtex.com/docs/guides/checkout-overview) and [Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search), ensuring customers see up-to-date options according to their region.
+This solution continuously updates product availability throughout the buying journey by responding to changes in catalog, pricing, inventory, or shipping settings. These updates are then sent to [Checkout](https://developers.vtex.com/docs/guides/checkout-overview) and [Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search), ensuring customers see up-to-date options based on their region.
 
 This feature introduces new hooks as part of the regionalization and location workflow:
 
-- `useRegion`: Access or update the user’s region information, such as postal code or location.
-- `useRegionModal`: Handle modal display logic for region selection, especially when the input of location is mandatory. 
-- `useGeoLocation`: Interact with the browser’s geolocation API or related client-side mechanisms to attempt to auto-detect the user’s location.
+- `useRegion`: Accesses or updates the user's region information, such as postal code or location.
+- `useRegionModal`: Handles modal display logic for region selection, especially when the location input is required.
+- `useGeoLocation`: Uses the browser’s geolocation API or other client-side methods to attempt to auto-detect the user's location.
 
 ## Default settings
 
-Delivery Promise feature is defined in the `deliveryPromise` section of the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
+Delivery Promise is defined in the `deliveryPromise` section of the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
 
-See below the default settings for FastStore projects created after the release of the Delivery Promise feature:
+Below are the default settings for FastStore projects created after the release of Delivery Promise.
 
 ```js discovery.config.js
 deliveryPromise: {
@@ -29,14 +29,14 @@ deliveryPromise: {
   },
 ```
 
-- `enabled`: When set to **true**, Delivery Promise activates, allowing the store to provide delivery estimates based on the customer’s location.
-- `mandatory`: When set to **false**, providing a postal code is optional for the user. Customers can browse and add items to the cart without submitting their postal code, though the accuracy of delivery information may be limited.
+- `enabled`: When set to **true**, Delivery Promise activates, allowing the store to provide delivery estimates based on the user’s location.
+- `mandatory`: When set to **false**, providing a postal code is optional for the user. Users can browse and add items to the cart without entering their postal code, though the accuracy of delivery information may be limited.
 
 ## Before you begin
 
 <Steps>
 
-### Have the `search-session` app
+### Get the `search-session` app
 
 Check if you have installed the `0.5.0` or a later version of the [`search-session`](https://developers.vtex.com/docs/apps/vtex.search-session) app.
 
@@ -53,7 +53,7 @@ In your terminal, log in to your account by running `vtex login {accountName}` a
 <details>
 <summary>Accounts in the `vtex.edition-store@5.x`</summary>
 
-If your account is using the `vtex.edition-store@5.x` major, the VTEX Intelligent Search app is already included, and you need to integrate the app via VTEX Admin.
+If your account is using the `vtex.edition-store@5.x` major, the VTEX Intelligent Search app is already included, and you need to integrate it via VTEX Admin.
 
 To integrate the VTEX Intelligent Search, access **Store Settings > Intelligent Search > Integrations** in the VTEX Admin, and click `START INTEGRATION`.
 
@@ -62,8 +62,8 @@ To integrate the VTEX Intelligent Search, access **Store Settings > Intelligent 
 <details>
 <summary>Accounts using an edition version below `5.x`</summary>
 
-1. In the VTEX IO CLI, log in to your VTEX account by running `vtex login {accountName}`. *Remember to replace the value between brackets with your account name.*
-2. If the VTEX Intelligent Search app is not installed in your account, run the following for Intelligent Search:
+1. In the VTEX IO CLI, log in to your VTEX account by running `vtex login {accountName}`. *Remember to replace the values between curly braces with your account name.*
+2. If the VTEX Intelligent Search app isn't installed in your account, run the following:
 
     ```bash
     vtex install vtex.search-resolver@1.x vtex.admin-search@1.x
@@ -84,9 +84,9 @@ If you are using a different major version and want to migrate, please [open a t
 
 Run the `yarn upgrade @faststore/cli` command to update the `@faststore/cli` package to its latest version.
 
-### Open a ticket to VTEX support
+  ### Open a ticket with VTEX Support
 
-Open a ticket to [VTEX support](https://help.vtex.com/en/support) and request the activation of Delivery Promise for your account.
+Open a ticket with [VTEX Support](https://help.vtex.com/en/support) and request the activation of Delivery Promise in your account.
 
 </Steps>
 
@@ -96,7 +96,7 @@ Open a ticket to [VTEX support](https://help.vtex.com/en/support) and request th
 
 1. Open your FastStore project using the code editor of your choice.
 2. Open the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
-3. Under the [`deliveryPromise`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options#deliverypromise) section, set the `enabled` value to `true`. Set the `mandatory` value according to your business needs. Learn more in the [Default settings](#default-settings) section.
+3. Under the [`deliveryPromise`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options#deliverypromise) section, set the `enabled` value to `true`. Set the `mandatory` value based on your business needs. Learn more in the [Default settings](#default-settings) section.
 
     ```js discovery.config.js
     deliveryPromise: {
@@ -121,12 +121,12 @@ You only need to [add one new section](#step-3-adding-region-popover-section), t
 
 ### Step 3 - Adding `Region Popover` section
 
-`Region Popover` is a section to manage user location inputs.
+`Region Popover` is the section that manages user location inputs.
 
-1. Access your VTEX Admin and go to **Storefront > Headless CMS > Global Sections**.
+1. In the VTEX Admin, go to **Storefront > Headless CMS > Global Sections**.
 2. In the Sections tab, click `+` to open a modal with a list of section options.
-3. Search for the **Region Popover** section and click on it to add.
-4. Set the `Title` and `Close popover aria-label` fields according to your scenario.
+3. Search for the **Region Popover** section and click it to add.
+4. Set the `Title` and `Close popover aria-label` fields based on your scenario.
 5. Click `Save` to save your changes.
 6. Click `Publish` to open a dropdown list with the options `Add to Release`, to schedule the update, and `Publish now`, to publish immediately.
 
@@ -134,13 +134,13 @@ Learn more in [Adding Sections to the Headless CMS](https://developers.vtex.com/
 
 ### Step 4 - [Optional] Defining a default postal code
 
-The default postal code serves as a fallback mechanism when the user doesn't provide a location, isn't logged in, or has no saved address.
+The default postal code is a fallback mechanism when the user doesn't provide a location, isn't logged in, or has no saved address.
 
 To set a default postal code for your store, follow the steps below:
 
 1. Open your FastStore project using the code editor of your choice.
 2. Open the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
-3. In the [`session`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options#session) object, set the `postalCode` value according to your scenario. See the following example:
+3. In the [`session`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options#session) object, set the `postalCode` value based on your scenario. See the following example:
 
      ```js discovery.config.js mark=12
       session: {
@@ -167,8 +167,8 @@ To provide accurate Delivery Promise estimates, FastStore projects determine use
 1. **User-provided location:** If the user provided their location, such as postal code, this information is used.
 2. **Logged-in user’s address:** If the user hasn’t provided a postal code, we attempt to identify the location using the logged-in user's address.
 3. **Default postal code:** If the user hasn't provided a location, isn’t logged in, or has no saved address, we check if the merchant has configured a default postal code for all buyers. Learn to do so in [Defining a default postal code](#step-4-optional-defining-a-default-postal-code).
-4. **No postal code (not mandatory):** If no postal code is provided and it’s not mandatory, products are displayed without using Delivery Promise.
-5. **No postal code (mandatory)**: If no postal code is provided and it’s mandatory, a modal is displayed that the buyer cannot close until a postal code is entered. To make the postal code mandatory, open your `discovery.config.js` file and change the `mandatory` field in the `deliveryPromise` object to `true`, as shown in the [Default settings](#default-settings) section.
+4. **No postal code (not required):** If no postal code is provided and not required, products are displayed without using Delivery Promise.
+5. **No postal code (required)**: If no postal code is provided when it's required, a modal is displayed that the buyer can't close until a postal code is entered. To make the postal code required, open your `discovery.config.js` file and change the `mandatory` field in the `deliveryPromise` object to `true`, as shown in the [Default settings](#default-settings) section.
 
 To better understand how this flow works, see the following diagram.
 
