--- a/docs/faststore/components/features/delivery-promise.mdx
+++ b/docs/faststore/components/features/delivery-promise.mdx
@@ -20,7 +20,7 @@ This feature introduces new hooks as part of the regionalization and location wo
 
 Delivery Promise is defined in the `deliveryPromise` section of the [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file.
 
-Below are the default settings for FastStore projects created after the release of Delivery Promise.
+Below are the default settings:
 
 ```js discovery.config.js
 deliveryPromise: {
