Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/features/delivery-promise.mdx
+++ b/docs/faststore/components/features/delivery-promise.mdx
@@ -128,7 +128,7 @@ You only need to [add one new section](#step-3-adding-region-popover-section), t
 3. Search for the **Region Popover** section and click it to add.
 4. Set the `Title` and `Close popover aria-label` fields based on your scenario.
 5. Click `Save` to save your changes.
-6. Click `Publish` to open a dropdown list with the options `Add to Release`, to schedule the update, and `Publish now`, to publish immediately.
+6. Click `Publish` to open a dropdown list with the options `Add to Release` (to schedule the update) and `Publish now` (to publish immediately).
 
 Learn more in [Adding Sections to the Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-3-adding-content-types-and-sections#step-3-adding-sections-to-the-headless-cms)
 
