--- a/docs/faststore/components/features/delivery-promise.mdx
+++ b/docs/faststore/components/features/delivery-promise.mdx
@@ -117,11 +117,11 @@ The expected response is that you receive the message `CMS synced successfully..
 
 - **Region Modal section:** Go to *Storefronts > Headless CMS > Global Sections > Region Modal*.
 
-You only need to [add one new section](#step-3-adding-region-popover-section), the `Region Popover`.
+You only need to [add a new section](#step-3-adding-region-popover-section), the `Region Popover`.
 
 ### Step 3 - Adding `Region Popover` section
 
-`Region Popover` is the section that manages user location inputs.
+`Region Popover` is a section that manages user location inputs. It's composed of other components, such as [`Popover`](https://developers.vtex.com/docs/guides/faststore/molecules-popover), [`InputField`](https://developers.vtex.com/docs/guides/faststore/molecules-input-field), [`Icon`](https://developers.vtex.com/docs/guides/faststore/atoms-icon, and [`Link`](https://developers.vtex.com/docs/guides/faststore/atoms-link).
 
 1. In the VTEX Admin, go to **Storefront > Headless CMS > Global Sections**.
 2. In the Sections tab, click `+` to open a modal with a list of section options.
