--- a/docs/faststore/components/features/delivery-promise.mdx
+++ b/docs/faststore/components/features/delivery-promise.mdx
@@ -4,7 +4,7 @@ title: "Delivery Promise"
 
 >ℹ This feature is in closed beta, available only for selected customers.
 
-In this guide, you’ll learn how to set Delivery Promise in your FastStore project.
+In this guide, you’ll learn how to configure Delivery Promise in your FastStore project.
 
 **Delivery Promise** is a feature that provides accurate and reliable delivery estimations for available products based on the customer location. It ensures that customers only see products that are in stock and can be delivered to their address or picked up at nearby locations.
 
@@ -121,7 +121,191 @@ You only need to [add a new section](#step-3-adding-region-popover-section), the
 
 ### Step 3 - Adding `Region Popover` section
 
-`Region Popover` is a section that manages user location inputs. It's composed of other components, such as [`Popover`](https://developers.vtex.com/docs/guides/faststore/molecules-popover), [`InputField`](https://developers.vtex.com/docs/guides/faststore/molecules-input-field), [`Icon`](https://developers.vtex.com/docs/guides/faststore/atoms-icon, and [`Link`](https://developers.vtex.com/docs/guides/faststore/atoms-link).
+`RegionPopover` is a section that manages user location inputs. It's used when location data is missing or the store's default postal code is applied. Available in [`@faststore/core`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson), `RegionPopover` uses the [`Popover`](https://developers.vtex.com/docs/guides/faststore/molecules-popover) component as its UI base.
+
+![regionpopover](https://vtexhelp.vtexassets.com/assets/docs/src/regionpopover___dedb0aad756657e71d4c8d40cb2ef5e7.png)
+
+<details>
+<summary>`RegionPopover` code</summary>
+```tsx packages/core/src/components/region/RegionPopover/RegionPopover.tsx
+import type { PopoverProps as UIPopoverProps } from '@faststore/ui'
+import {
+  Icon as UIIcon,
+  InputField as UIInputField,
+  Link as UILink,
+  Popover as UIPopover,
+  useUI,
+} from '@faststore/ui'
+import { useRef, useState } from 'react'
+
+import useRegion from '../RegionModal/useRegion'
+
+import { sessionStore, useSession } from 'src/sdk/session'
+import { textToTitleCase } from 'src/utils/utilities'
+import styles from './section.module.scss'
+
+interface RegionPopoverProps {
+  title?: UIPopoverProps['title']
+  closeButtonAriaLabel?: UIPopoverProps['closeButtonAriaLabel']
+  inputField?: {
+    label?: string
+    errorMessage?: string
+    noProductsAvailableErrorMessage?: string
+    buttonActionText?: string
+  }
+  idkPostalCodeLink?: {
+    text?: string
+    to?: string
+    icon?: {
+      icon?: string
+      alt?: string
+    }
+  }
+  textBeforeLocation?: string
+  textAfterLocation?: string
+  description?: string
+  triggerRef?: UIPopoverProps['triggerRef']
+  onDismiss: UIPopoverProps['onDismiss']
+  offsetTop?: UIPopoverProps['offsetTop']
+  offsetLeft?: UIPopoverProps['offsetLeft']
+  placement?: UIPopoverProps['placement']
+}
+
+function RegionPopover({
+  title = 'Set your location',
+  closeButtonAriaLabel,
+  inputField: {
+    label: inputFieldLabel,
+    errorMessage: inputFieldErrorMessage,
+    noProductsAvailableErrorMessage: inputFieldNoProductsAvailableErrorMessage,
+    buttonActionText: inputButtonActionText,
+  },
+  idkPostalCodeLink: {
+    text: idkPostalCodeLinkText,
+    to: idkPostalCodeLinkTo,
+    icon: { icon: idkPostalCodeLinkIcon, alt: idkPostalCodeLinkIconAlt },
+  },
+  textBeforeLocation = 'Your current location is:',
+  textAfterLocation = 'Use the field below to change it.',
+  description = 'Offers and availability vary by location.',
+  triggerRef,
+  offsetTop = 6,
+  offsetLeft,
+  placement = 'bottom-start',
+}: RegionPopoverProps) {
+  const inputRef = useRef<HTMLInputElement>(null)
+  const { isValidating, ...session } = useSession()
+  const { popover: displayPopover, closePopover } = useUI()
+  const { city, postalCode } = sessionStore.read()
+  const location = city ? `${textToTitleCase(city)}, ${postalCode}` : postalCode
+
+  const [input, setInput] = useState<string>('')
+
+  const { loading, setRegion, regionError, setRegionError } = useRegion()
+
+  const handleSubmit = async () => {
+    if (isValidating) {
+      return
+    }
+
+    await setRegion({
+      session,
+      onSuccess: () => {
+        setInput('')
+        closePopover()
+      },
+      postalCode: input,
+      errorMessage: inputFieldErrorMessage,
+      noProductsAvailableErrorMessage:
+        inputFieldNoProductsAvailableErrorMessage,
+    })
+  }
+
+  const idkPostalCodeLinkProps = {
+    href: idkPostalCodeLinkTo,
+    children: (
+      <>
+        {idkPostalCodeLinkText}
+        {!!idkPostalCodeLinkIcon && (
+          <UIIcon
+            name={idkPostalCodeLinkIcon}
+            aria-label={idkPostalCodeLinkIconAlt}
+            width={20}
+            height={20}
+          />
+        )}
+      </>
+    ),
+  }
+
+  const RegionPopoverContent = (
+    <>
+      <span data-fs-region-popover-description>
+        {postalCode ? (
+          <>
+            {textBeforeLocation} <span>{location}</span>. {textAfterLocation}
+          </>
+        ) : (
+          <>{description}</>
+        )}
+      </span>
+      <UIInputField
+        data-fs-region-popover-input
+        id="region-popover-input-postal-code"
+        inputRef={inputRef}
+        label={inputFieldLabel}
+        actionable
+        value={input}
+        onInput={(e) => {
+          regionError !== '' && setRegionError('')
+          setInput(e.currentTarget.value)
+        }}
+        onSubmit={handleSubmit}
+        onClear={() => {
+          setInput('')
+          setRegionError('')
+        }}
+        buttonActionText={loading ? '...' : inputButtonActionText}
+        error={regionError}
+      />
+      {idkPostalCodeLinkTo && (
+        <UILink data-fs-region-popover-link {...idkPostalCodeLinkProps} />
+      )}
+    </>
+  )
+
+  return (
+    <>
+      {displayPopover.isOpen && (
+        <div className={`${styles.section} section-region-popover`}>
+          <UIPopover
+            data-fs-region-popover
+            title={title}
+            isOpen={displayPopover.isOpen}
+            content={RegionPopoverContent}
+            placement={placement}
+            dismissible
+            triggerRef={triggerRef}
+            offsetTop={offsetTop}
+            offsetLeft={offsetLeft}
+            closeButtonAriaLabel={closeButtonAriaLabel}
+            onEntered={() => {
+              if (!postalCode && inputRef.current) {
+                inputRef.current.focus()
+              }
+            }}
+          />
+        </div>
+      )}
+    </>
+  )
+}
+
+export default RegionPopover
+```
+</display>
+
+Follow the steps below to add the `RegionPopover` section to the Headless CMS.
 
 1. In the VTEX Admin, go to **Storefront > Headless CMS > Global Sections**.
 2. In the Sections tab, click `+` to open a modal with a list of section options.
