fix(delivery-promise.mdx): fixing format

--- a/docs/faststore/components/features/delivery-promise.mdx
+++ b/docs/faststore/components/features/delivery-promise.mdx
@@ -303,7 +303,7 @@ function RegionPopover({
 
 export default RegionPopover
 ```
-</display>
+</details>
 
 Follow the steps below to add the `RegionPopover` section to the Headless CMS.
 
