fix(my-account/overview.mdx): fixing code snippet

--- a/docs/faststore/components/features/my-account/overview.mdx
+++ b/docs/faststore/components/features/my-account/overview.mdx
@@ -36,7 +36,7 @@ To enable the experimental **My Account** feature in your project, follow the st
 
     ```js discovery.config.js mark=2
     experimental: {
-          enableCypressExtension: true,
+          enableFaststoreMyAccount: true,
     }
     ```
 
