FastStore CLI: fix filename and title

--- a/docs/faststore/docs/developer-tools/faststore-cli.mdx
+++ b/docs/faststore/docs/developer-tools/faststore-cli.mdx
@@ -1,5 +1,5 @@
 ---
-title: '3. FastStore CLI'
+title: 'FastStore CLI'
 ---
 
 The FastStore Command Line Interface (CLI) provides pre-configured scripts for starting, building, and developing FastStore projects. It also helps keep FastStore projects up to date with the [`@faststore/core`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson) package.
